--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PictureInPicture"
         tools:targetApi="31">
-        <receiver android:name=".MainActivity$PipReceiver" />
+        <receiver android:name=".presentation.MainActivity$PipReceiver" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:exported="true"
             android:label="@string/app_name"
