--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.didexcodes.pictureinpicture">
 
     <application
+        android:name=".PictureInPictureApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PictureInPicture"
         tools:targetApi="31">
-        <receiver android:name=".presentation.MainActivity$PipReceiver" />
+        <receiver android:name=".data.DefaultPipReceiver" />
         <activity
             android:name=".presentation.MainActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
