--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PictureInPicture"
         tools:targetApi="31">
-        <receiver android:name=".data.DefaultPipReceiver" />
+        <receiver android:name=".data.PipBroadcastReceiver" />
         <activity
             android:name=".presentation.MainActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
